Various bug fixes (#247)
* Fix UDP/chat bugs - build replies with the transport the message arrived on, fixing the ClassCastException when a UDP message reaches a TCP-hosted game, and clean up OnlineManager

* Add a headless test fixture for the poker module, pinning the reply-transport fix and telling a stray chat hello it has reached a game client

* Move logging init out of static initializer

* Isolate tests from the developer's real home directory and preferences, and drop the last sun.java2d.noddraw references

* Only accept lobby chat from the chat server link, so a client cannot have chat injected by anything that can reach it